--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="exhibition"/>
-        <title>the ExhiByte</title>
+        <title>the ExhiGlobe</title>
         <link rel="stylesheet" type="text/css" href="style/primary.css"/>
+        <link rel="icon" type="img/png" href="images/exhiglobeCOLORS.png"/>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Kulim+Park:wght@300&display=swap');
         </style>
     </head>
-    <body onload="genMenu(['ExhiByte'])">
-        <div id="corner-MENU">
+    <body onload="genMenu(['ExhiGlobe'])">
+        <div id="corner-MENU" style="background-image:url('images/exhiglobeCOLORS.png')">
             <div id="menu-Content" style="opacity:0;display:none;">
-                <h1>ExhiByte</h1>
+                <h1>ExhiGlobe</h1>
                 <a id="l1" class="menu-Link">First</a>
                 <a id="l2" class="menu-Link">Second</a>
                 <a id="l3" class="menu-Link">Third</a>
                 <a id="l4" class="menu-Link">Fourth</a>
             </div>
-            <h1 id="home-button" style="display:none;" onmousedown="genMenu(['ExhiByte'])">&#60;<span style="font-size:0.75em;margin-left:0.25em;">back</span></h1>
+            <h1 id="home-button" style="display:none;" onmousedown="genMenu(['ExhiGlobe'])">&#60;<span style="font-size:0.75em;margin-left:0.25em;">back</span></h1>
         </div>
         <script src="scripts/primary.js"></script>
     </body>
