--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="exhibition"/>
-        <title>the ExhiGlobe</title>
+        <title>ExhiGlobe</title>
         <link rel="stylesheet" type="text/css" href="style/primary.css"/>
         <link rel="icon" type="img/png" href="images/exhiglobeCOLORS.png"/>
         <style>
@@ -25,7 +25,7 @@
 
         <div id="main-Content">
             <div id="inside-Content">
-                <h1>Welcome | ExhiGlobe</h1>
+                <h1>Welcome to ExhiGlobe</h1>
             </div>
         </div>
         <script src="scripts/primary.js"></script>
