--- a/name.html
+++ b/name.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="exhibition"/>
-        <title>Name | ExhiGlobe</title>
+        <title>Name, ExhiGlobe</title>
         <link rel="stylesheet" type="text/css" href="style/primary.css"/>
         <link rel="icon" type="img/png" href="images/exhiglobeCOLORS.png"/>
         <style>
