--- a/origins.html
+++ b/origins.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="exhibition"/>
-        <title>Origins | ExhiGlobe</title>
+        <title>Origins, ExhiGlobe</title>
         <link rel="stylesheet" type="text/css" href="style/primary.css"/>
         <link rel="icon" type="img/png" href="images/exhiglobeCOLORS.png"/>
         <style>
