--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
 
         <div id="main-Content">
             <div id="inside-Content">
-                <h1>Welcome to ExhiGlobe</h1>
+                <h1>Welcome to ExhiGlobe.</h1>
+                <p>
+                    Navigate using the menu square in the upper left corner.
+                </p>
+                <p>
+                    Quick Links:
+                </p>
+                <ul>
+                    <li><a href="origins.html">Origins of ExhiGlobe</a></li>
+                    <li><a href="timeline.html">Project Timeline</a></li>
+                </ul>
             </div>
         </div>
         <script src="scripts/primary.js"></script>
