--- a/origins.html
+++ b/origins.html
@@ -12,13 +12,13 @@
         </style>
     </head>
     <body onload="genMenu(['ExhiGlobe'])">
-        <div id="corner-MENU" style="background-image:url('images/exhiglobeCOLORS.png')" onmouseover="light(this)" onmouseout="unlight(this)">
+        <div id="corner-MENU" style="background-image:url('images/exhiglobeCOLORS.png')" onmouseover="light(this, true)" onmouseout="unlight(this)">
             <div id="menu-Content" style="opacity:0;display:none;">
             </div>
             <h1 id="home-button" style="display:none;" onmousedown="genMenu(['ExhiGlobe'])">&#60;<span style="font-size:0.75em;margin-left:0.25em;">back</span></h1>
         </div>
 
-        <div id="main-Content">
+        <div id="main-Content" onmouseover="light(this, false)" onmouseout="unlight(this)">
             <div id="inside-Content">
                 <h1>Origins of ExhiGlobe</h1>
             </div>
