fixed mobile glitch, new logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a id="l3" class="menu-Link">Third</a>
                 <a id="l4" class="menu-Link">Fourth</a>
             </div>
-            <h1 id="home-button" style="display:none;" onmousedown="genMenu(['ExhiGlobe'])">&#60;<span style="font-size:0.75em;margin-left:0.25em;">back</span></h1>
+            <h1 id="home-button" style="display:none;" onmousedown="genMenu(['ExhiGlobe'])">&#60;<span id="backTxt" style="font-size:0.75em;margin-left:0.25em;">back</span></h1>
         </div>
 
         <div id="main-Content" onmouseover="light(this, false)" onmouseout="unlight(this)">
@@ -38,6 +38,7 @@
                 </ul>
             </div>
         </div>
+
         <script src="scripts/primary.js"></script>
     </body>
 </html>
